--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
     <head>                                                                      
         <meta charset="utf-8">
         <meta http-equiv="refresh" content="0;url=http://autogoal.demos.gplsi.es" />      
-        <link rel="canonical" href="http://autogoal.demos.gplsi.es" />                    
+        <link rel="canonical" href="http://autogoal.demos.gplsi.es" />  
+        <title>AutoGOAL Demo (redirecting)</title>
     </head>                                                                                                                                                                  
     <body>                                                                      
         <h1>                                                                    
-            The page been moved to <a href="http://autogoal.demos.gplsi.es">http://autogoal.demos.gplsi.es</a>
+            You should be redirected to <a href="http://autogoal.demos.gplsi.es">http://autogoal.demos.gplsi.es</a>.
+            If you are not redirected in 5 seconds, please click the previous link.
         </h1>                                                                  
-    </body>                                                                    
+    </body>                      
+    
+    <script>
+        window.location = "http://autogoal.demos.gplsi.es"
+    </script>
 </html>
